--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# IDEA
+.vscode
+
 # Distribution / packaging
 .Python
 build/
@@ -47,6 +50,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+test-unitttest.xml 
 
 # Translations
 *.mo
