--- a/experiments/squad/squad_task_def.yml
+++ b/experiments/squad/squad_task_def.yml
@@ -1,27 +1,26 @@
-squad-v2:
-  data_format: PremiseAndOneHypothesis
-  encoder_type: BERT
-  dropout_p: 0.05
-  enable_san: false
-  metric_meta:
-    - ACC
-    - MCC
-  n_class: 1
-  task_type: Span
-  split_names:
-    - train
-    - dev
 squad:
-  data_format: PremiseAndOneHypothesis
+  data_format: MRC
   encoder_type: BERT
-  dropout_p: 0.05
+  dropout_p: 0.1
   enable_san: false
   metric_meta:
-    - ACC
-    - MCC
-  n_class: 1
+    - EmF1
+  n_class: 2
   task_type: Span
+  loss: SpanCeCriterion
   split_names:
     - train
     - dev
-
+squad-v2:
+  data_format: MRC
+  encoder_type: BERT
+  dropout_p: 0.1
+  enable_san: false
+  metric_meta:
+    - EmF1
+  n_class: 2
+  task_type: Span
+  loss: SpanCeCriterion
+  split_names:
+    - train
+    - dev
